# Devcontainer-for-STM32F4-Discovery

./: .gitignore  CMakeLists.txt  README.md  build_and_flash.sh
.devcontainer/: Dockerfile.alpine  Dockerfile.debian  Dockerfile.stm32  Dockerfile.ubuntu  devcontainer.json  requirements.txt
STM32CubeMX/: .mxproject  Makefile  STM32CubeMX.ioc
STM32CubeMX/Core/Src/: main.c
cmake/: gcc_stm32f4.cmake
